<resources>
    <string name="app_name">BMI</string>
    <string name="title_home">Главная</string>
    <string name="title_index">Индексы</string>
    <string name="title_itog">Итоги</string>
    <string name="title_stat">Статистика</string>
    <string name="StartButtonText">Продолжить</string>
    <string name="StartPageText">Онлайн-калькулятор функционального состояния и массы тела</string>
    <string name="SecondTextStartPage">8 показателей</string>
    <string name="IndexStarts">Начать</string>
    <string name="title_activity_calc_imt">calc_imt</string>
    <string name="desc_for_kerdo">оценивающий состояние вегетативной нервной системы</string>
    <string name="desc_forIFUNIZ">С помощью этого теста оценивают функциональные возможности системы кровообращения.</string>
    <string name="desc_for_ski">определяющий резервы и выносливость дыхательной и сердечно-сосудистой систем</string>
    <string name="desc_for_serdce">Индекс используется для косвенного определения степени обеспеченности миокарда кислородом</string>
    <string name="desc_forLifeIndex">дающий косвенное представление о функциональных возможностях системы внешнего дыхания, его рассчитывали по формуле: ЖИ=ЖЕЛМ , где ЖЕЛ – жизненная емкость легких (мл), М – масса тела (кг). </string>
    <string name="desc_for_koef">ЧСС – частота сердечных сокращений (уд/мин), САД систолическое артериальное давление, ДАД – диастолическое артериальное давление, разница которых дает ПД – пульсовое давление (мм рт.ст.). </string>
    <string name="itog1_desc">- 16-18,5 кг/м2 и менее, то наблюдается недостаток массы тела,
- 18,5-25 кг/м2 – норма,
25-30 кг/м2 – избыточная масса тела,
30-35 кг/м2 – первая степень ожирения,
35-40 кг/м2 – вторая степень ожирения,
свыше 40 кг/м2 – третья степень ожирения.
- индекс не учитывает пол, возраст, распределение в организме жирового и мышечного компонента тела
- средние значения индекса, полученные в РЭУ им. Г.В. Плеханова составили у девушек – 19-23 кг/м2, у юношей 20-23 кг/м2
- у представителей молодого возраста (до 30 лет) индекс массы тела ниже по сравнению с представителями среднего возраста
- для поддержания оптимальной массы тела необходимо ходить не менее 10 тысяч шагов в сутки
- по индексу массы тела можно лишь косвенно судить о норме, недостатке или избыточной массе тела
- при индексе свыше 25 кг/м2 необходимо подключить онлайн-калькулятор питания и контролировать полученные калории, увеличить прогулки на свежем воздухе, ограничить хлебобулочные изделия</string>
    <string name="desc_for_imt">Представляет собой значение по оценке степени соответствия массы тела человека и роста (длины тела), в результате определения индекса можно косвенно судить о том, что масса тела находится в пределах нормы или недостаточна или наоборот избыточная масса тела. </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>