<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/back">

    <TextView
        android:id="@+id/mainText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/StartPageText"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/secondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/SecondTextStartPage"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainText"
        app:layout_constraintVertical_bias="0.103" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="147dp"
        android:layout_height="141dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/img_reu_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@id/secondText"
        app:layout_constraintTop_toBottomOf="@id/mainText" />

    <Button
        android:id="@+id/startPageButton"
        android:onClick="GoIndex"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/StartButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="373dp"
        android:layout_height="202dp"
        android:src="@drawable/img_logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />
</androidx.constraintlayout.widget.ConstraintLayout>